use webkit-image-mask to fix overflow hidden bug 62363 in chromium/blink

--- a/css/workandplay.css
+++ b/css/workandplay.css
@@ -35,6 +35,7 @@ audio {display: none;}
     margin: 0 auto;
     border-radius: 50%;
     overflow: hidden;
+    -webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC);
 }
 
 .cycle {
@@ -46,7 +47,7 @@ audio {display: none;}
     border-radius: 50%;
     width: 20em;
     height: 20em;
-    margin: 0 auto;   
+    margin: 0 auto;
 }
 
 .cycles_active .cycle {
